[build-system]
requires = [
  "Cython==3.0.10",
  "numpy==1.17.3; python_version < '3.8'",  # oldest build supported by scipy, scikit-learn and pandas on py37
  "numpy==1.20.3; python_version == '3.8'",  # oldest build supported by scipy, scikit-learn and pandas on py38
  "numpy>=2.0.0rc1; python_version >= '3.9'",
  "setuptools",
  "wheel",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
allow_redefinition = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
skips = ["B101"]

[tool.cython-lint]
max-line-length = 120
ignore = ["W191"]
