[metadata]
name = encoders
version = 0.0.4
author = Dobatymo
description = "Faster than scikit encoders
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Dobatymo/encoders
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = False
packages = encoders
python_requires = >=3.7

[options.extras_require]
test =
	numpy
bench =
	genutility[time]
	numpy
	pandas[output_formatting]
	scikit-learn
	tqdm

[options.package_data]
encoders =
	py.typed
